--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production node bin/www",
-    "dev": "NODE_ENV=development node bin/www"
+    "dev": "gulp; NODE_ENV=development node bin/www"
   },
   "dependencies": {
     "body-parser": "x",
@@ -15,9 +15,14 @@
     "debug": "x",
     "dotenv": "^1.2.0",
     "express": "~4.9.x",
+    "jquery": "^2.2.4",
+    "jsdom": "^9.2.1",
     "moment": " ^2.11.1",
     "morgan": "x",
-    "serve-favicon": "x"
+    "needle": "^1.0.0",
+    "q": "^1.4.1",
+    "serve-favicon": "x",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
